144,143, 142, 141, 145, 139, 138,   135
